clap_derive/tests/ui/arg_enum_on_struct.rs
use clap::ArgEnum;

#[derive(ArgEnum, Debug)]
struct Opt {}

fn main() {
    println!("{:?}", Opt::VARIANTS);
}
